# sphinx-markdown-docs

./: .readthedocs.yml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
docs/source/: conf.py  index.md  installation.md
